kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    otel/monitoring: monitoring_enabled
  labels:
    kubernetes.io/metadata.name: consultant
  name: consultant
spec:
