kubernetes/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  namespace: consultant
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongodb
        image: mongodb/mongodb-community-server:7.0-ubi8
        ports:
        - containerPort: 27017
        volumeMounts:
          - name: mongodb
            mountPath: /data/db
      volumes:
        - name: mongodb
          persistentVolumeClaim:
            claimName: mongodb-storage
