kubernetes/pacman-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacman
  namespace: consultant
  labels:
    app: pacman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pacman
  template:
    metadata:
      annotations:
        instrumentation.opentelemetry.io/inject-nodejs: "true"
      labels:
        app: pacman
    spec:
      containers:
      - name: pacman
        image: 172.24.89.181:5000/pacman-nodejs-app:1.7.7
        ports:
        - containerPort: 8080
