kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: consultant
  labels:
    app: mongodb
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
  selector:
    app: mongodb
