kubernetes/pacman-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pacman
  namespace: consultant
  labels:
    app: pacman
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: pacman
