kubernetes/ingress-pacman.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: consultant
  name: pacman
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pacman
            port:
              number: 8080
