kubernetes/ingressroute-pacman.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pacman
  namespace: consultant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`pacman.ntslab.loc`)
      kind: Rule
      services:
        - name: pacman
          port: 8080
